--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
@@ -1,5 +1,5 @@
 .container {
-	margin-bottom: 0.75rem;
+	margin-bottom: 1rem;
 	display: flex;
 	flex-direction: column;
 	gap: 0.125rem;
@@ -24,10 +24,7 @@ label {
 /* TODO: use semantic color here */
 .error-message {
 	color: var(--error-500);
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	transform: translate(0.08rem, 1.35rem);
+	margin-left: 0.25rem;
 }
 
 .input-container input {
