--- a/apps/client/src/app/pages/rating-passengers/rating-passengers.component.css
+++ b/apps/client/src/app/pages/rating-passengers/rating-passengers.component.css
@@ -47,11 +47,11 @@ header h1 {
 }
 
 .avatar {
-	width: 5.5rem;
+	width: 4rem;
 	aspect-ratio: 1 / 1;
 	border-radius: 100%;
 	object-fit: cover;
-	margin-top: 0.5rem;
+	margin: 0.5rem 0;
 }
 
 .passenger-information p {
