--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -170,11 +170,11 @@ h1 {
 }
 
 .avatar {
-	width: 5.5rem;
+	width: 4rem;
 	aspect-ratio: 1 / 1;
 	border-radius: 100%;
 	object-fit: cover;
-	margin-top: 0.5rem;
+	margin: 0.5rem 0;
 }
 
 .passenger-name {
