fix: change styles inputs

--- a/apps/client/src/app/pages/edit-vehicle/edit-vehicle.component.css
+++ b/apps/client/src/app/pages/edit-vehicle/edit-vehicle.component.css
@@ -20,7 +20,7 @@ h1 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 1.125rem;
+	gap: .625rem;
 	width: 21.125rem;
 	margin-top: 1.25rem;
 }
