--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -1,65 +1,68 @@
 <page-layout [hasTabBar]="true">
-	<header>
-		<h1 class="heading-small">Información del viaje</h1>
-		<section class="route-information">
-			<div class="starting-point">
-				<img src="assets/svgs/StartingPointGray.svg" alt="Punto de Inicio" class="icon">
-				<div class="starting-point-info">
-					<p class="paragraph-small title">Punto de partida</p>
-					@if(ride?.travel?.type === 'from-ucab'){
-					<p class="paragraph-small location">UCAB</p>
-					} @else {
-					<p class="paragraph-small location">Mi ubicación actual</p>
-					}
-				</div>
-			</div>
-			<div class="external-destination">
-				<img src="assets/svgs/ExternalPointGray.svg" alt="Destino Externo" class="icon">
-				<div class="external-destination-info">
-					<p class="paragraph-small title">Destino Externo</p>
-					@if(ride?.travel?.type === 'from-ucab'){
-					<p class="paragraph-small location">Isla Dorada</p>
-					} @else {
-					<p class="paragraph-small location">UCAB</p>
-					}
-				</div>
-			</div>
-		</section>
-		<div class="card-row paragraph-xsmall">
-			<div class="card-information">
-				<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
-				<span class="card-information-title paragraph-small">1500 mts</span>
-			</div>
-			<div class="card-information">
-				<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
-				<span class="card-information-title paragraph-small">70%</span>
-			</div>
-			@if(ride?.travel?.forWomen){
-			<div class="only-woman-info">
-				<img src="assets/svgs/SecurityShield.svg" alt="Escudo">
-				<p class="paragraph-small">Solo mujeres en el viaje</p>
-			</div>
-			}
-		</div>
-	</header>
+  <header>
+    <h1 class="heading-small">Información del viaje</h1>
+    <section class="route-information">
+      <div class="starting-point">
+        <img src="assets/svgs/StartingPointGray.svg" alt="Punto de Inicio" class="icon">
+        <div class="starting-point-info">
+          <p class="paragraph-small title">Punto de partida</p>
+          @if(ride?.travel?.type === 'from-ucab'){
+          <p class="paragraph-small location">UCAB</p>
+          } @else {
+          <p class="paragraph-small location">Mi ubicación actual</p>
+          }
+        </div>
+      </div>
+      <div class="external-destination">
+        <img src="assets/svgs/ExternalPointGray.svg" alt="Destino Externo" class="icon">
+        <div class="external-destination-info">
+          <p class="paragraph-small title">Destino Externo</p>
+          @if(ride?.travel?.type === 'from-ucab'){
+          <p class="paragraph-small location">Isla Dorada</p>
+          } @else {
+          <p class="paragraph-small location">UCAB</p>
+          }
+        </div>
+      </div>
+    </section>
+    <div class="card-row paragraph-xsmall">
+      <div class="card-information">
+        <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
+        <span class="card-information-title paragraph-small">1500 mts</span>
+      </div>
+      <div class="card-information">
+        <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
+        <span class="card-information-title paragraph-small">70%</span>
+      </div>
+      @if(ride?.travel?.forWomen){
+      <div class="only-woman-info">
+        <img src="assets/svgs/SecurityShield.svg" alt="Escudo">
+        <p class="paragraph-small">Solo mujeres en el viaje</p>
+      </div>
+      }
+    </div>
+  </header>
 
-	<section class="driver-vehicle-information">
-		<div class="driver-information">
-			<img class="avatar" src="{{ ride?.travel?.vehicle?.driver?.profilePicSrc }}" alt="Imágen del conductor" />
-			<p class="label-medium">{{ride?.travel?.vehicle?.driver?.firstName}}
-				{{ride?.travel?.vehicle?.driver?.lastName}}</p>
-			<button (click)="redirectToChat()">
-				<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
-			</button>
-		</div>
-		<div class="rating-information">
-			<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
-			<span class="card-information rating-number label-small">4.8 (60)</span>
-		</div>
-		<movic-vehicle [color]="ride?.travel?.vehicle?.color ?? '#fff'"></movic-vehicle>
-		<div class="vehicle-information">
-			<p class="paragraph-medium">{{ride?.travel?.vehicle?.brand}} | {{ride?.travel?.vehicle?.model}}</p>
-			<p class="paragraph-medium">{{ride?.travel?.vehicle?.plate}}</p>
-		</div>
-	</section>
+  @if(ride?.travel?.vehicle) {
+  <section class="driver-vehicle-information">
+    <div class="driver-information">
+      <img class="avatar" src="{{ ride?.travel?.vehicle?.driver?.profilePicSrc }}" alt="Imágen del conductor" />
+      <p class="label-medium">{{ride?.travel?.vehicle?.driver?.firstName}}
+        {{ride?.travel?.vehicle?.driver?.lastName}}</p>
+      <button (click)="redirectToChat()">
+        <img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
+      </button>
+    </div>
+    <div class="rating-information">
+      <img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
+      <span class="card-information rating-number label-small">4.8 (60)</span>
+    </div>
+    <movic-vehicle [color]="ride?.travel?.vehicle?.color ?? '#fff'"></movic-vehicle>
+    <div class="vehicle-information">
+      <p class="paragraph-medium">{{ride?.travel?.vehicle?.brand}} | {{ride?.travel?.vehicle?.model}}</p>
+      <p class="paragraph-medium">{{ride?.travel?.vehicle?.plate}}</p>
+    </div>
+  </section>
+  }
+
 </page-layout>
