--- a/apps/client/src/app/pages/chat/chat.component.css
+++ b/apps/client/src/app/pages/chat/chat.component.css
@@ -123,6 +123,14 @@
 	scrollbar-width: none;
 }
 
+.fix {
+	display: flex;
+	flex-direction: column-reverse;
+	min-width: 100%;
+	overflow-y: auto;
+	scrollbar-width: none;
+}
+
 .msg-container,
 .own-msg-container {
 	display: flex;
