--- a/apps/client/src/app/pages/home/home.component.css
+++ b/apps/client/src/app/pages/home/home.component.css
@@ -1,60 +1,34 @@
-/* The switch - the box around the slider */
-div {
-	margin-top: 5rem;
-	text-align: center;
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 3rem;
+	gap: 1.5rem;
 }
 
-.switch {
-	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
+.card {
+	display: flex;
+	max-width: 20rem;
+	gap: 0.2rem;
+	padding: 1rem;
+	border-radius: 6px;
+	border: solid 1px var(--primary-text-label);
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-	opacity: 0;
-	width: 0;
-	height: 0;
+.card-info {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
 
-/* The slider */
-.slider {
-	position: absolute;
-	cursor: pointer;
-	inset: 0;
-	background-color: #ccc;
-	transition: .4s;
+radio-button {
+	margin-top: 0.2rem;
 }
 
-.slider::before {
-	position: absolute;
-	content: "";
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
-	background-color: white;
-	transition: .4s;
+h3 {
+	color: var(--primary-text-label);
 }
 
-input:checked + .slider {
-	background-color: #2196f3;
-}
-
-input:focus + .slider {
-	box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider::before {
-	transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-	border-radius: 34px;
-}
-
-.slider.round::before {
-	border-radius: 50%;
+p {
+	color: var(--primary-text-value);
 }
