feat: add cancel travel feature in travel lobby component

--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -177,6 +177,12 @@ h1 {
 	margin: 0.5rem 0;
 }
 
+.title-container {
+	display: flex;
+	gap: .625rem;
+	justify-content: center;
+}
+
 .passenger-name {
 	text-overflow: ellipsis;
 	color: var(--primary-text-value);
