--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -151,6 +151,7 @@ h1 {
 	border: 3px solid #bab3c7;
 	width: auto;
 	max-width: 100%;
+	min-width: 20.125rem;
 	display: flex;
 	justify-content: start;
 	align-items: center;
@@ -159,10 +160,10 @@ h1 {
 
 .card-row {
 	display: flex;
-	justify-content: left;
 	align-items: center;
 	gap: 0.6rem;
-	border: 2px solid red;
+	width: 13.875rem;
+	justify-content: space-between;
 }
 
 .card-row.justify-between {
@@ -170,7 +171,7 @@ h1 {
 }
 
 .avatar {
-	width: 4rem;
+	width: 3rem;
 	aspect-ratio: 1 / 1;
 	border-radius: 100%;
 	object-fit: cover;
@@ -184,12 +185,14 @@ h1 {
 }
 
 .passenger-name {
-	text-overflow: ellipsis;
 	color: var(--primary-text-value);
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .card-information-title {
 	color: var(--primary-text-placeholder);
+	white-space: nowrap;
 }
 
 .rating-number {
