--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -162,11 +162,10 @@ h1 {
 	display: flex;
 	align-items: center;
 	gap: 0.6rem;
-	width: 13.875rem;
-	justify-content: space-between;
+	width: 100%;
 }
 
-.card-row.justify-between {
+.justify-between {
 	justify-content: space-between;
 }
 
