fix: delete % match

--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
@@ -15,10 +15,10 @@
         <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
         <span class="card-information-title">{{ driver.walkDistance }}m</span>
       </div>
-      <div class="card-information">
+      <!-- <div class="card-information">
         <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
         <span class="card-information-title">70%</span>
-      </div>
+      </div> -->
       <div class="card-information">
         <img class="card-information-icon" src="/assets/svgs/CarSeatLight.svg" alt="icono de asientos del carro" />
         <span class="card-information-title">{{ driver.passengerAmount }}/{{ driver.passengerCapacity }}</span>
