--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -98,10 +98,10 @@
                 <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
                 <span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
               </div>
-              <div class="card-information">
+              <!-- <div class="card-information">
                 <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
                 <span class="card-information-title">70% de emparejamiento</span>
-              </div>
+              </div> -->
             </div>
           </section>
         </div>
@@ -150,10 +150,10 @@
                 <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
                 <span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
               </div>
-              <div class="card-information">
+              <!-- <div class="card-information">
                 <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
                 <span class="card-information-title">70% de emparejamiento</span>
-              </div>
+              </div> -->
             </div>
           </section>
         </div>
