--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -30,10 +30,10 @@
         <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
         <span class="card-information-title paragraph-small">150 mts</span>
       </div>
-      <div class="card-information">
+      <!-- <div class="card-information">
         <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
         <span class="card-information-title paragraph-small">70%</span>
-      </div>
+      </div> -->
       @if(ride?.travel?.forWomen){
       <div class="only-woman-info">
         <img src="assets/svgs/SecurityShield.svg" alt="Escudo">
