--- a/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
+++ b/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
@@ -2,7 +2,7 @@
 	[src]="mapSrc" allowfullscreen>
 </iframe> -->
 <google-map height="100%" width="100%" [options]="options" [center]="center" (mapClick)="addMarker($event)">
-	<button mButton class="save-button" (click)="handleAction()">{{actionLabel}}</button>
+	<button class="save-button" (click)="handleAction()">{{actionLabel}}</button>
 	@if (markerPosition) {
 	<map-marker [position]="markerPosition" [options]="markerOptions" />
 	}
