--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.css
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.css
@@ -8,7 +8,7 @@ h1 {
 ul {
 	list-style-type: none;
 	padding: 0;
-	margin-top: 1rem;
+	margin-top: 0.5rem;
 	width: 100%;
 }
 
@@ -44,4 +44,19 @@ section {
 
 .driver-card {
 	cursor: pointer;
+}
+
+.buttons-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.update-button {
+	margin-top: .5rem;
+	display: flex;
+	align-items: start;
+	width: 100%;
 }
