--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
@@ -1,30 +1,30 @@
 <div class="card">
-  <img class="avatar" src="{{ driver.profilePicSrc }}" alt="Imágen del conductor" />
+	<img class="avatar" src="{{ driver.profilePicSrc }}" alt="Imágen del conductor" />
 
-  <section class="card-body">
-    <div class="card-row label-medium">
-      <span class="driver-name">{{showFirstName(driver.firstName)}}
-        {{showFirstLastName(driver.lastName)}}</span>
-      <div class="rating-information">
-        <img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
-        <span class="card-information rating-number">{{roundToOneDecimal(driver.rating)}}
-          ({{driver.reviewsQuantity}})</span>
-      </div>
-    </div>
+	<section class="card-body">
+		<div class="card-row label-medium">
+			<span class="driver-name">{{showFirstName(driver.firstName)}}
+				{{showFirstLastName(driver.lastName)}}</span>
+			<div class="rating-information">
+				<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
+				<span class="card-information rating-number">{{roundToOneDecimal(driver.totalStarRating ?? 0)}}
+					({{driver.totalReviewsQuantity}})</span>
+			</div>
+		</div>
 
-    <div class="card-row paragraph-xsmall">
-      <div class="card-information">
-        <img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
-        <span class="card-information-title">{{ driver.walkDistance }}m</span>
-      </div>
-      <!-- <div class="card-information">
+		<div class="card-row paragraph-xsmall">
+			<div class="card-information">
+				<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
+				<span class="card-information-title">{{ driver.walkDistance }}m</span>
+			</div>
+			<!-- <div class="card-information">
         <img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
         <span class="card-information-title">70%</span>
       </div> -->
-      <div class="card-information">
-        <img class="card-information-icon" src="/assets/svgs/CarSeatLight.svg" alt="icono de asientos del carro" />
-        <span class="card-information-title">{{ driver.passengerAmount }}/{{ driver.passengerCapacity }}</span>
-      </div>
-    </div>
-  </section>
+			<div class="card-information">
+				<img class="card-information-icon" src="/assets/svgs/CarSeatLight.svg" alt="icono de asientos del carro" />
+				<span class="card-information-title">{{ driver.passengerAmount }}/{{ driver.passengerCapacity }}</span>
+			</div>
+		</div>
+	</section>
 </div>
