--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -55,7 +55,8 @@
     </div>
     <div class="rating-information">
       <img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
-      <span class="card-information rating-number label-small">{{ride?.travel?.vehicle?.driver?.rating}}
+      <span class="card-information rating-number label-small">{{roundToOneDecimal(ride?.travel?.vehicle?.driver?.rating
+        ?? 0)}}
         ({{ride?.travel?.vehicle?.driver?.reviewsQuantity}})</span>
     </div>
 
