--- a/apps/client/src/app/pages/rating-passengers/rating-passengers.component.html
+++ b/apps/client/src/app/pages/rating-passengers/rating-passengers.component.html
@@ -12,7 +12,7 @@
           {{showFirstLastName(ride.passenger.lastName)}}</p>
         <div class="rating-information">
           <img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
-          <span class="card-information rating-number label-small">{{roundToOneDecimal(ride.passenger.rating)}}
+          <span class="card-information rating-number label-small">{{ride.passenger.rating}}
             ({{ride.passenger.reviewsQuantity}})</span>
         </div>
       </div>
